test/functions/helpers/integrationHelpers/success/index.js
const {
  authentication,
} = require("$/functions/helpers/integrationHelpers/success/authentication");
const {
  cellphone,
} = require("$/functions/helpers/integrationHelpers/success/cellphone");
const {
  chatId,
} = require("$/functions/helpers/integrationHelpers/success/chatId");
const {
  chatInfo,
} = require("$/functions/helpers/integrationHelpers/success/chatInfo");
const {
  countryCode,
} = require("$/functions/helpers/integrationHelpers/success/countryCode");
const {
  countryName,
} = require("$/functions/helpers/integrationHelpers/success/countryName");
const {
  firstName,
} = require("$/functions/helpers/integrationHelpers/success/firstName");
const {
  lastName,
} = require("$/functions/helpers/integrationHelpers/success/lastName");
const {
  message,
} = require("$/functions/helpers/integrationHelpers/success/message");
const {
  messageId,
} = require("$/functions/helpers/integrationHelpers/success/messageId");
const {
  participantId,
} = require("$/functions/helpers/integrationHelpers/success/participantId");
const {
  phoneNumber,
} = require("$/functions/helpers/integrationHelpers/success/phoneNumber");
const {
  userId,
} = require("$/functions/helpers/integrationHelpers/success/userId");
const {
  senderId,
} = require("$/functions/helpers/integrationHelpers/success/senderId");
const {
  token,
} = require("$/functions/helpers/integrationHelpers/success/token");
const {
  verificationCode,
} = require("$/functions/helpers/integrationHelpers/success/verificationCode");

const integrationHelpersSuccessCollection = {
  authentication,
  cellphone,
  chatId,
  chatInfo,
  countryCode,
  countryName,
  firstName,
  lastName,
  message,
  messageId,
  participantId,
  phoneNumber,
  userId,
  senderId,
  token,
  verificationCode,
};

module.exports = { integrationHelpersSuccessCollection };
